# CrochetCharts

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  Taskfile.yml
.agents/skills/arc42-sync/: SKILL.md
.beads/: .gitignore  config.yaml  interactions.jsonl  metadata.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/win/: Dockerfile
.github/workflows/: build.yml
cmake/modules/: NSIS.template.in
docs/: CMakeLists.txt
docs/architecture/: 01-introduction-and-goals.md  02-constraints.md  03-context.md  04-solution-strategy.md  05-building-blocks.md  06-runtime.md  07-deployment.md  08-crosscutting.md  09-decisions.md  10-quality.md  11-risks-and-debt.md  12-glossary.md  README.md
docs/plans/: license-copyright-and-rename.md  windows-vm-acceptance-test.md
docs/plans/scripts/: kvm-host-setup.sh  vm-create-win11.sh  vm-share-artifacts.sh  vm-snapshot.sh
resources/: installers.cmake
src/: AGENTS.md  CMakeLists.txt  propertiesdock.cpp
stitches/: AGENTS.md
tests/: .gitignore  AGENTS.md  CMakeLists.txt  main.cpp  testcell.cpp  testcell.h  testchartview.cpp  testchartview.h  testfilefactory.cpp  testfilefactory.h  teststitch.cpp  teststitchlibrary.cpp  teststitchset.cpp  testtextview.cpp  testtextview.h
tests/fixtures/: basic_stitches.xml
tests/fixtures/port/: README.md  basic_v2.crochetcharts  blank_v2.crochetcharts  legacy_v1.crochetcharts  legacy_v1.snapshot.txt
